--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ author:
   bio: >- # tell to the world
     我于中国人民大学攻读博士学位，方向为数据库，这个博客作为记事本，记录自己的学习历程。这里是我的github主页<a href= "https://github.com/YangHarvey" target="_blank" rel="noopener">@github</a>.
   username: username # general username
-  github: github_username # github username
+  github: YangHarvey # github username
   twitter: twitter_username # twitter username
   facebook: facebook_username # facebook username
   email: yang_shiming@outlook.com # email adress
