--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ timezone: Asia/Jakarta # set your timezone
 image: assets/img/ogp.png # This image used for Open Graph more info https://ogp.me/
 repo: https://github.com/YangHarvey/YangHarvey.github.io.git # site repo [optional]
 mode: light # default theme "dark" | "light"
+future: true
 
 # Profile settings
 author:
